Audio control z-index fix

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -958,7 +958,7 @@ body {
 
     &-audio {
       display: initial;
-
+      z-index: 100;
       position: fixed;
       left: 14px;
       top: 14px;
